refactor: 사전 식물 jsonPath로 검증하도록 수정